# codex-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  findings.md  progress.md  pyproject.toml  task_plan.md
.agents/skills/browse/: SKILL.md
.agents/skills/plan-ceo-review/: SKILL.md
.agents/skills/plan-eng-review/: SKILL.md
.agents/skills/qa/: SKILL.md
.agents/skills/qa/templates/: qa-report-template.md
.agents/skills/retro/: SKILL.md
.agents/skills/review/: SKILL.md  greptile-triage.md
.agents/skills/setup-browser-cookies/: SKILL.md
.agents/skills/ship/: SKILL.md
.context/retros/: 2026-03-14-1.json  2026-03-14-2.json
.github/workflows/: ci.yml
.gstack/gh-validation/: marker-2026-03-14.md
.gstack/qa-reports/: baseline.json  report.md
docs/: consistency-audit.md  migration.md  runbooks.md
src/gstack_codex/: __init__.py  agent_browser.py  cli.py  errors.py  models.py
src/gstack_codex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gstack_codex/skills/: __init__.py  browse.py  common.py  plan_ceo_review.py  plan_eng_review.py  qa.py  retro.py  review.py  setup_browser_cookies.py  ship.py
tests/e2e/: test_skill_inventory.py
tests/integration/: test_browse_and_qa.py
tests/unit/: test_agent_browser.py  test_cli.py  test_models_and_errors.py  test_skill_modules.py
