[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gstack-codex"
version = "0.1.0"
description = "Codex-native skill pack and tooling with agent-browser integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "gstack-codex maintainers" }]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=5.0.0",
]

[project.scripts]
gstack-codex = "gstack_codex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/gstack_codex --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/gstack_codex"]
omit = [
  "tests/*"
]

[tool.coverage.report]
skip_empty = true
show_missing = true
